# dot

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.dot
CliParser/: CliParser.cpp  CliParser.h  CliStaticCommands.h
Exceptions/: DotException.cpp  DotException.h  TokenException.cpp  TokenException.h
Expressions/: Expression.cpp  Expression.h
Expressions/literalExpressions/: NumericValue.cpp  NumericValue.h  TextValue.cpp  TextValue.h  Value.cpp  Value.h
Lexer/: Lexer.cpp  Lexer.h  LexerTokenType.h
lexer/: Lexer.cpp  Lexer.h  LexerTokenType.h
